# MongrelDB-Viewer

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json
docs/: README.md  about.md  agent.md  ann.md  constellation.md  deck.md  mcp.md  onboarding.md  sql.md  table.md
scripts/: gen-compat-fixture.sh  install-icons-linux.sh  regen-credits.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  about.hbs  about.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/legal/: LICENSE-MIT.txt  acknowledgments.md  crates.json  npm-packages.json  npm-third-party.md  runtime.md  third-party.md
src-tauri/src/: error.rs  legal.rs  lib.rs  linux_display.rs  main.rs  models.rs
src-tauri/src/chat/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: ann.rs  connection.rs  insights.rs  inspect.rs  mod.rs  session.rs  sql.rs
src-tauri/src/embeddings/: mod.rs
src-tauri/src/mcp/: mod.rs  server.rs  tools.rs
src-tauri/tests/fixtures/: README.md
src/components/: AboutPages.tsx  CommandPalette.tsx  Constellation.tsx  DataTable.tsx  SqlWorkbench.tsx  TableBrowser.tsx
src/legal/: crates.json
src/lib/: api.ts  platform.ts  recents.ts
src/styles/: global.css
