[package]
name = "mongreldb-viewer"
version = "1.0.2"
description = "MongrelDB Viewer - Signal Deck for AI-native columnar databases"
authors = ["Visorcraft"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/visorcraft/mongreldb-viewer"
rust-version = "1.88"

[lib]
name = "mongreldb_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "io-std", "net", "fs"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "blocking"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
arrow = { version = "58", default-features = false, features = ["json"] }
tracing = "0.1"
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
bytes = "1"
async-trait = "0.1"
dashmap = "6"
dirs = "6"

# Best-fitting MongrelDB stack for Tauri: embed core for direct files,
# plus the official HTTP client for mongreldb-server multi-client access.
mongreldb-core = "0.60.3"
mongreldb-query = "0.60.3"
mongreldb-client = "0.60.3"

# Local dense embeddings (default model: all-MiniLM-L6-v2, 384 dims)
fastembed = { version = "5", optional = true }

[features]
default = ["local-embeddings"]
local-embeddings = ["dep:fastembed"]

[profile.release]
lto = true
codegen-units = 1
strip = true
