[package]
name = "mongreldb-viewer"
version = "1.4.1"
description = "MongrelDB Viewer - Signal Deck for AI-native columnar databases"
authors = ["Visorcraft"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/visorcraft/mongreldb-viewer"
rust-version = "1.88"
# Application binary (not a crates.io library). Also keeps cargo-about
# from listing this crate under Third-party licenses when private.ignore is set.
publish = false

[lib]
name = "mongreldb_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "io-std", "net", "fs"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream", "blocking"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
# Pinned to 58: mongreldb-query/client require arrow ^58.
arrow = { version = "58", default-features = false, features = ["json"] }
tracing = "0.1"
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.7", features = ["cors"] }
bytes = "1"
async-trait = "0.1"
dashmap = "6"
dirs = "6"

# Best-fitting MongrelDB stack for Tauri: embed core for direct files,
# plus the official HTTP client for mongreldb-server multi-client access.
# Aligned train with crates.io (0.64.0: semantic embedding identity + text retrieve).
# mongreldb-kit is used only to write kit_schema.json on demo create so the
# resulting root is openable by Kit-backed clients (e.g. Mongrel desktop).
# Runtime direct mode still uses core/query; server schema inspection uses
# mongreldb-client's kit_schema HTTP surface.
mongreldb-core = "0.64.0"
mongreldb-query = "0.64.0"
mongreldb-client = "0.64.0"
mongreldb-kit = "0.64.0"

# Local dense embeddings (default model: all-MiniLM-L6-v2, 384 dims)
fastembed = { version = "5", optional = true }

[features]
default = ["local-embeddings"]
local-embeddings = ["dep:fastembed"]

[profile.release]
lto = true
codegen-units = 1
strip = true
